deployment-ai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service-deployment
  namespace: smart-farm
  labels:
    app: ai-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ai-service
  template:
    metadata:
      labels:
        app: ai-service
    spec:
      containers:
      - name: ai-service
        image: hassanmaher2001/farmnet-ai-service:17
        ports:
        - containerPort: 5001
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5001
          initialDelaySeconds: 60
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: smart-farm
spec:
  type: ClusterIP
  selector:
    app: ai-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
