smart-farm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-farm-ingress
  namespace: smart-farm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    # ===== السطور السحرية لحل مشكلة الـ CORS =====
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
spec:
  rules:
  # First rule (catch-all for AWS ELB)
  - http:
      paths:
      - path: /predict
        pathType: Prefix
        backend:
          service:
            name: ai-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: iot-service
            port:
              number: 80
